Fix PillsInput alignment with single line inputs

--- a/src/mantine-core/src/components/Pill/Pill.module.css
+++ b/src/mantine-core/src/components/Pill/Pill.module.css
@@ -5,9 +5,15 @@
   --pill-fz-lg: rem(16px);
   --pill-fz-xl: rem(18px);
 
+  --pill-height-xs: rem(18px);
+  --pill-height-sm: rem(22px);
+  --pill-height-md: rem(25px);
+  --pill-height-lg: rem(28px);
+  --pill-height-xl: rem(32px);
+
   font-size: var(--pill-fz);
   flex: 0;
-  height: 2em;
+  height: var(--pill-height);
   padding-left: 0.8em;
   padding-right: var(--_pill-padding-right, 0.8em);
   display: inline-flex;
@@ -66,7 +72,7 @@
   cursor: var(--_pill-cursor, default);
   overflow: hidden;
   height: 100%;
-  line-height: 1.95em;
+  line-height: var(--pill-height);
   text-overflow: ellipsis;
 }
 
